Modernize old render method (#70)
* Cleaned up heading

* Normalized names of high-level operations

* Modernized appendtext

* Ported code

* Bug fix

* Converted list

* Ported pill

* Cleaned up section

* Refactored section title

* Ported section content

* Ported debug placeholder

* Cleaned up page front matter

* Updated sidebar renderer

* Refactored try it now

* Tweaks

--- a/examples/docusaurus/mistral/docs/api/tag/classifiers.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/classifiers.mdx
@@ -4,7 +4,7 @@ sidebar_label: Classifiers
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Classifiers Operations \{#classifiers\}
@@ -17,15 +17,15 @@ Moderations
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-moderations_v1_moderations_post+try-it-now\}
+### Try it Now \{#operation-moderations_v1_moderations_post\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -453,15 +453,15 @@ Chat Moderations
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-chat_moderations_v1_chat_moderations_post+try-it-now\}
+### Try it Now \{#operation-chat_moderations_v1_chat_moderations_post\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -2354,15 +2354,15 @@ Classifications
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-classifications_v1_classifications_post+try-it-now\}
+### Try it Now \{#operation-classifications_v1_classifications_post\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -2760,15 +2760,15 @@ Chat Classifications
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-chat_classifications_v1_chat_classifications_post+try-it-now\}
+### Try it Now \{#operation-chat_classifications_v1_chat_classifications_post\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
