--- a/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
@@ -4,7 +4,7 @@ sidebar_label: Embeddings
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Embeddings Operations \{#embeddings\}
@@ -19,15 +19,15 @@ Embeddings
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-embeddings_v1_embeddings_post+try-it-now\}
+### Try it Now \{#operation-embeddings_v1_embeddings_post\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
