--- a/examples/docusaurus/mistral/docs/api/tag/fim.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/fim.mdx
@@ -4,7 +4,7 @@ sidebar_label: Fim
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Fim Operations \{#fim\}
@@ -19,15 +19,15 @@ FIM completion.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-fim_completion_v1_fim_completions_post+try-it-now\}
+### Try it Now \{#operation-fim_completion_v1_fim_completions_post\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1375,15 +1375,15 @@ Mistral AI provides the ability to stream responses back to a client in order to
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-stream_fim+try-it-now\}
+### Try it Now \{#operation-stream_fim\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
