--- a/examples/docusaurus/mistral/docs/api/tag/models.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/models.mdx
@@ -4,7 +4,7 @@ sidebar_label: Models
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Models Operations \{#models\}
@@ -19,15 +19,15 @@ List all models available to the user.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-list_models_v1_models_get+try-it-now\}
+### Try it Now \{#operation-list_models_v1_models_get\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1163,15 +1163,15 @@ The ID of the model to retrieve.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-retrieve_model_v1_models_model_id_get+try-it-now\}
+### Try it Now \{#operation-retrieve_model_v1_models_model_id_get\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -2273,15 +2273,15 @@ The ID of the model to delete.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-delete_model_v1_models_model_id_delete+try-it-now\}
+### Try it Now \{#operation-delete_model_v1_models_model_id_delete\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -2641,15 +2641,15 @@ The ID of the model to update.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -3707,15 +3707,15 @@ The ID of the model to archive.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -3879,15 +3879,15 @@ The ID of the model to unarchive.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
