--- a/examples/nextra/mistral/src/app/api/tag/batch/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/batch/jobs/page.mdx
@@ -3,7 +3,7 @@ sidebarTitle: Batch Jobs
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Batch Jobs Operations [#batch/jobs]
@@ -18,15 +18,15 @@ Get a list of batch jobs for your organization and user.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-jobs_api_routes_batch_get_batch_jobs+try-it-now]
+### Try it Now [#operation-jobs_api_routes_batch_get_batch_jobs]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -538,15 +538,15 @@ Create a new batch job, it will be queued for processing.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-jobs_api_routes_batch_create_batch_job+try-it-now]
+### Try it Now [#operation-jobs_api_routes_batch_create_batch_job]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1121,15 +1121,15 @@ Get a batch job details by its UUID.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-jobs_api_routes_batch_get_batch_job+try-it-now]
+### Try it Now [#operation-jobs_api_routes_batch_get_batch_job]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1588,15 +1588,15 @@ Request the cancellation of a batch job.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-jobs_api_routes_batch_cancel_batch_job+try-it-now]
+### Try it Now [#operation-jobs_api_routes_batch_cancel_batch_job]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
