--- a/examples/nextra/mistral/src/app/api/tag/ocr/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/ocr/page.mdx
@@ -3,7 +3,7 @@ sidebarTitle: Ocr
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, ExpandableSection, ExpandableProperty, ExpandableBreakout, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, ExpandableBreakout, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/react";
 
 
 # Ocr Operations [#ocr]
@@ -16,15 +16,15 @@ OCR
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-ocr_v1_ocr_post+try-it-now]
+### Try it Now [#operation-ocr_v1_ocr_post]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
