--- a/examples/docusaurus/mistral/docs/api/tag/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/agents.mdx
@@ -4,7 +4,7 @@ sidebar_label: Agents
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, ExpandableSection, ExpandableProperty, ExpandableBreakout, TabbedSection, SectionTab, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, ExpandableBreakout, TabbedSection, SectionTab, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Agents Operations \{#agents\}
@@ -17,15 +17,15 @@ Agents Completion
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-agents_completion_v1_agents_completions_post+try-it-now\}
+### Try it Now \{#operation-agents_completion_v1_agents_completions_post\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -3317,15 +3317,15 @@ Mistral AI provides the ability to stream responses back to a client in order to
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-stream_agents+try-it-now\}
+### Try it Now \{#operation-stream_agents\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
