--- a/examples/docusaurus/mistral/docs/api/tag/batch/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/batch/jobs.mdx
@@ -4,7 +4,7 @@ sidebar_label: Batch Jobs
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Batch Jobs Operations \{#batch/jobs\}
@@ -19,15 +19,15 @@ Get a list of batch jobs for your organization and user.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_batch_get_batch_jobs+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_batch_get_batch_jobs\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -539,15 +539,15 @@ Create a new batch job, it will be queued for processing.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_batch_create_batch_job+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_batch_create_batch_job\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1122,15 +1122,15 @@ Get a batch job details by its UUID.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_batch_get_batch_job+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_batch_get_batch_job\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1589,15 +1589,15 @@ Request the cancellation of a batch job.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_batch_cancel_batch_job+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_batch_cancel_batch_job\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
