--- a/examples/docusaurus/mistral/docs/api/tag/fine-tuning/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/fine-tuning/jobs.mdx
@@ -4,7 +4,7 @@ sidebar_label: Fine Tuning Jobs
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Fine Tuning Jobs Operations \{#fine-tuning/jobs\}
@@ -19,15 +19,15 @@ Get a list of fine-tuning jobs for your organization and user.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1774,15 +1774,15 @@ Create a new fine-tuning job, it will be queued for processing.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -4773,15 +4773,15 @@ The ID of the job to analyse.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -7115,15 +7115,15 @@ The ID of the job to cancel.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -9451,15 +9451,15 @@ Request the start of a validated fine tuning job.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+try-it-now\}
+### Try it Now \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
