--- a/examples/nextra/mistral/src/app/api/tag/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/agents/page.mdx
@@ -3,7 +3,7 @@ sidebarTitle: Agents
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, ExpandableSection, ExpandableProperty, ExpandableBreakout, TabbedSection, SectionTab, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, ExpandableBreakout, TabbedSection, SectionTab, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Agents Operations [#agents]
@@ -16,15 +16,15 @@ Agents Completion
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-agents_completion_v1_agents_completions_post+try-it-now]
+### Try it Now [#operation-agents_completion_v1_agents_completions_post]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -3316,15 +3316,15 @@ Mistral AI provides the ability to stream responses back to a client in order to
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-stream_agents+try-it-now]
+### Try it Now [#operation-stream_agents]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
