--- a/examples/nextra/mistral/src/app/api/tag/files/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/files/page.mdx
@@ -3,7 +3,7 @@ sidebarTitle: Files
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Files Operations [#files]
@@ -18,15 +18,15 @@ Returns a list of files that belong to the user's organization.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-files_api_routes_list_files+try-it-now]
+### Try it Now [#operation-files_api_routes_list_files]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -386,15 +386,15 @@ Please contact us if you need to increase these storage limits.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-files_api_routes_upload_file+try-it-now]
+### Try it Now [#operation-files_api_routes_upload_file]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 import { openAsBlob } from "node:fs";
 
 const mistral = new Mistral({
@@ -815,15 +815,15 @@ Returns information about a specific file.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-files_api_routes_retrieve_file+try-it-now]
+### Try it Now [#operation-files_api_routes_retrieve_file]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1156,15 +1156,15 @@ Delete a file.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-files_api_routes_delete_file+try-it-now]
+### Try it Now [#operation-files_api_routes_delete_file]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1348,15 +1348,15 @@ Download a file
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-files_api_routes_download_file+try-it-now]
+### Try it Now [#operation-files_api_routes_download_file]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1476,15 +1476,15 @@ Number of hours before the url becomes invalid. Defaults to 24h
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-files_api_routes_get_signed_url+try-it-now]
+### Try it Now [#operation-files_api_routes_get_signed_url]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
