--- a/examples/nextra/mistral/src/app/api/tag/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/fim/page.mdx
@@ -3,7 +3,7 @@ sidebarTitle: Fim
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Fim Operations [#fim]
@@ -18,15 +18,15 @@ FIM completion.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-fim_completion_v1_fim_completions_post+try-it-now]
+### Try it Now [#operation-fim_completion_v1_fim_completions_post]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1374,15 +1374,15 @@ Mistral AI provides the ability to stream responses back to a client in order to
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-stream_fim+try-it-now]
+### Try it Now [#operation-stream_fim]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
