--- a/examples/nextra/mistral/src/app/api/tag/models/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/models/page.mdx
@@ -3,7 +3,7 @@ sidebarTitle: Models
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, TryItNow, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Pill, TryItNow, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Models Operations [#models]
@@ -18,15 +18,15 @@ List all models available to the user.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-list_models_v1_models_get+try-it-now]
+### Try it Now [#operation-list_models_v1_models_get]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1162,15 +1162,15 @@ The ID of the model to retrieve.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-retrieve_model_v1_models_model_id_get+try-it-now]
+### Try it Now [#operation-retrieve_model_v1_models_model_id_get]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -2272,15 +2272,15 @@ The ID of the model to delete.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-delete_model_v1_models_model_id_delete+try-it-now]
+### Try it Now [#operation-delete_model_v1_models_model_id_delete]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -2640,15 +2640,15 @@ The ID of the model to update.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model+try-it-now]
+### Try it Now [#operation-jobs_api_routes_fine_tuning_update_fine_tuned_model]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -3706,15 +3706,15 @@ The ID of the model to archive.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model+try-it-now]
+### Try it Now [#operation-jobs_api_routes_fine_tuning_archive_fine_tuned_model]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -3878,15 +3878,15 @@ The ID of the model to unarchive.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Try it Now [#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model+try-it-now]
+### Try it Now [#operation-jobs_api_routes_fine_tuning_unarchive_fine_tuned_model]
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
 <TryItNow
- externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
- defaultValue={`import { Mistral } from "@mistralai/mistralai";
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
